<?xml version="1.0"?>
<package format="2">
  <name>fish_model_simulator</name>
  <version>1.0.0</version>
  <description>fish_model_simulator</description>

  <maintainer email="novak247@fel.cvut.cz">Michal Novak</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

</package>
